--- a/fontface.css
+++ b/fontface.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Lora';
-    src: url('Lora-Italic.woff2') format('woff2'),
+    src: url('/fonts/Lora-Italic.woff2') format('woff2'),
         url('Lora-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Lora';
-    src: url('Lora-Regular.woff2') format('woff2'),
-        url('Lora-Regular.woff') format('woff');
+    src: url('/fonts/Lora-Regular.woff2') format('woff2'),
+        url('/fonts/Lora-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Black.woff2') format('woff2'),
-        url('SFUIDisplay-Black.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Black.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Black.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Heavy.woff2') format('woff2'),
-        url('SFUIDisplay-Heavy.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Heavy.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Heavy.woff') format('woff');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Bold.woff2') format('woff2'),
-        url('SFUIDisplay-Bold.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Bold.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Semibold.woff2') format('woff2'),
-        url('SFUIDisplay-Semibold.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Semibold.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Semibold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Ultralight.woff2') format('woff2'),
-        url('SFUIDisplay-Ultralight.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Ultralight.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Ultralight.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Thin.woff2') format('woff2'),
-        url('SFUIDisplay-Thin.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Thin.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -72,8 +72,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Regular.woff2') format('woff2'),
-        url('SFUIDisplay-Regular.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Regular.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -81,8 +81,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Light.woff2') format('woff2'),
-        url('SFUIDisplay-Light.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Light.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -90,8 +90,8 @@
 
 @font-face {
     font-family: 'SF UI Display';
-    src: url('SFUIDisplay-Medium.woff2') format('woff2'),
-        url('SFUIDisplay-Medium.woff') format('woff');
+    src: url('/fonts/SFUIDisplay-Medium.woff2') format('woff2'),
+        url('/fonts/SFUIDisplay-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
