--- a/fontface.css
+++ b/fontface.css
@@ -133,3 +133,25 @@ line-height: 110%;
     font-size: 16px;
     line-height: 18px;
 }
+
+
+
+/* CAMBIOS SCROLLBAR */
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: #000000; 
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #000000; 
+  }
+  
+  
